--- a/Files/squad.html
+++ b/Files/squad.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="squad.css" />
-    <link rel="stylesheet" href="curremtMatch.css" />
     <link rel="stylesheet" href="footer.css" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    />
   </head>
   <body>
     <div class="container">
@@ -22,63 +25,21 @@
         <div class="body">
           <div class="matchHeading"><a>Match Records</a></div>
           <div class="matchContent">
-            <div class="matchBoxes">
+            <!-- <div class="matchBoxes">
               <div class="matchBoxesHeading">
-                <div class="sr"><a>1.</a></div>
                 <div class="matchTeamName">
                   <a>Nitesh vs Savita</a>
                 </div>
               </div>
               <div class="matchBoxesBody">
-                <!-- when match is over -->
-                <div class="winningEmoji"></div>
                 <div class="matchStartBtn">
-                  <button class="matchBtn">Start</button>
+                  <button><a class="matchBtn">Start</a></button>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
-
-          <!-- When match is start -->
-          <div class="matchContentPart2">
-            <div class="currentMatch">
-              <div class="currentMatchHeading">
-                <div class="currentMatchName">
-                  <a id="currentMatchNameId">Nitesh Vs Savita</a>
-                </div>
-                <div class="currentMatchTime">
-                  <a id="currentMatchTimeId">(15:30)</a>
-                </div>
-              </div>
-              <div class="currentMatchBody">
-                <form>
-                  <div class="winnerCover">
-                    <label for="winner">Points Table</label>
-                  </div>
-                  <div class="playerNameCover">
-                    <div class="playerA">
-                      <div class="playerwinnerName">
-                        <label for="winner">Nitesh</label>
-                      </div>
-                      <div class="playerInput">
-                        <input type="number" id="winnerName" />
-                      </div>
-                    </div>
-                    <div class="playerB">
-                      <div class="playerwinnerName">
-                        <label for="winner">Savita</label>
-                      </div>
-                      <div class="playerInput">
-                        <input type="number" id="winnerName" />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="submitBtn">
-                    <button id="submitBtnId">Submit</button>
-                  </div>
-                </form>
-              </div>
-            </div>
+          <div class="finalSquadCover">
+            <a id="finalPageBtn">SUBMIT</a>
           </div>
         </div>
         <!-- boby part over -->
