most Alogorithm changed

--- a/Files/currentMatch.html
+++ b/Files/currentMatch.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="curremtMatch.css" />
+    <link rel="stylesheet" href="currentPosition.css" />
     <link rel="stylesheet" href="footer.css" />
   </head>
   <body>
@@ -72,6 +73,19 @@
               </div>
             </div>
           </div>
+
+          <!-- profile start -->
+          <div class="currentPositionCover">
+            <div class="profileHeading"><a>Player's Profile</a></div>
+            <div class="allProfile">
+              <!-- <div class="profileList">
+                <span><a>Position-1</a></span>
+                <span><a>Nitesh</a></span>
+                <span><a>Current Points - 9</a></span>
+              </div> -->
+            </div>
+          </div>
+          <!-- profile end -->
         </div>
         <!-- boby part over -->
 
