--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
         <!-- footer part over -->
       </div>
     </div>
-    <script src="Files/index.mjs" type="module"></script>
+    <script src="Files/index.js"></script>
   </body>
 </html>
