--- a/Files/squad.html
+++ b/Files/squad.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="squad.css" />
+    <link rel="stylesheet" href="currentPosition.css" />
     <link rel="stylesheet" href="footer.css" />
     <link
       rel="stylesheet"
@@ -27,6 +28,9 @@
           <div class="matchContent">
             <!-- <div class="matchBoxes">
               <div class="matchBoxesHeading">
+                <div class="matchCategory">
+                  <a style="font-size: 1rem">Semi-final</a>
+                </div>
                 <div class="matchTeamName">
                   <a>Nitesh vs Savita</a>
                 </div>
@@ -37,9 +41,23 @@
                 </div>
               </div>
             </div> -->
+            <!-- finish -->
           </div>
+
           <div class="finalSquadCover">
-            <a id="finalPageBtn">SUBMIT</a>
+            <a id="finalPageBtn">Submit</a>
+          </div>
+
+          <!-- profile -->
+          <div class="currentPositionCover">
+            <div class="profileHeading"><a>Player's Profile</a></div>
+            <div class="allProfile">
+              <!-- <div class="profileList">
+                <span><a>Position-1</a></span>
+                <span><a>Nitesh</a></span>
+                <span><a>Current Points - 9</a></span>
+              </div> -->
+            </div>
           </div>
         </div>
         <!-- boby part over -->
@@ -49,6 +67,7 @@
         <!-- footer part over -->
       </div>
     </div>
-    <script src="squad.mjs" type="module"></script>
+    <script src="squad.js"></script>
+    <script src="finalist.js"></script>
   </body>
 </html>
