--- a/Files/squad.html
+++ b/Files/squad.html
@@ -45,7 +45,7 @@
           </div>
 
           <div class="finalSquadCover">
-            <a id="finalPageBtn">Submit</a>
+            <a id="finalPageBtn">Over</a>
           </div>
 
           <!-- profile -->
