--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                       id="playerName"
                       placeholder="player Name"
                       style="width: 80%"
+                      autocomplete="false"
                     />
                   </div>
                   <div class="formBodyBtn">
@@ -72,7 +73,7 @@
                   </div>
                 </div>
               </div>
-              <div class="formElement">
+              <div class="formElement" style="height: 16%">
                 <a class="nextBtn">Next</a>
               </div>
             </form>
