player profile motioin,speaking functionality direct tap one semitbtn,timer old version footer,rank size is so big

--- a/Files/tournamentHistory.html
+++ b/Files/tournamentHistory.html
@@ -23,7 +23,28 @@
             <div class="tournamentProfileHeading">
               <a>Tournament History</a>
             </div>
-            <div class="tournamentProfileBody"></div>
+            <div class="tournamentProfileBody">
+              <!-- <div class="tournamentProfileList">
+                <span class="tntProfItems" style="width: 90%; padding: 0.1rem">
+                  <a style="transform: translateX(0rem); margin: 0 0"
+                    >2021-12-07</a
+                  ></span
+                >
+                <span class="tntProfItems itemFlexbox">
+                  <a id="rankItems">1.</a>
+                  <a>Nitesh</a>
+                  <a>Points : 9</a>
+                </span>
+                <span
+                  class="tntProfItems"
+                  style="min-height: 45px; width: 30%"
+                  id="speakingBtn"
+                  ><a id="speakingBtnValue" style="margin: 0; transform: translateX(0)"
+                    >Speak</a
+                  ></span
+                > 
+              </div>-->
+            </div>
           </div>
         </div>
         <!-- boby part over -->
