--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- boby part over -->
 
         <!-- footer part start -->
-        <footer class="footer"></footer>
+        <footer class="footer" style="height: 10%"></footer>
         <!-- footer part over -->
       </div>
     </div>
