--- a/Files/tournamentHistory.html
+++ b/Files/tournamentHistory.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="tournamentHistory.css" />
     <link rel="stylesheet" href="footer.css" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    />
   </head>
   <body>
     <div class="container">
@@ -50,10 +54,49 @@
         <!-- boby part over -->
 
         <!-- footer part start -->
-        <footer class="footer"></footer>
+        <footer class="footer">
+          <div class="navigator">
+            <ul>
+              <li class="list active">
+                <a href="">
+                  <sapn class="icon"
+                    ><i class="fa fa-home" aria-hidden="true"></i
+                  ></sapn>
+                  <sapn class="iconText">Home</sapn>
+                </a>
+              </li>
+              <li class="list">
+                <a href="">
+                  <sapn class="icon"
+                    ><i class="fa fa-list-alt" aria-hidden="true"></i>
+                  </sapn>
+                  <sapn class="iconText">list</sapn>
+                </a>
+              </li>
+              <li class="list">
+                <a href="">
+                  <sapn class="icon"
+                    ><i class="fa fa-user" aria-hidden="true"></i
+                  ></sapn>
+                  <sapn class="iconText">Profile</sapn>
+                </a>
+              </li>
+              <li class="list">
+                <a href="">
+                  <sapn class="icon"
+                    ><i class="fa fa-history" aria-hidden="true"></i>
+                  </sapn>
+                  <sapn class="iconText">History</sapn>
+                </a>
+              </li>
+              <div class="indicator"></div>
+            </ul>
+          </div>
+        </footer>
         <!-- footer part over -->
       </div>
     </div>
     <script src="tournamentHistory.js"></script>
+    <script src="footer.js"></script>
   </body>
 </html>
