--- a/Files/currentMatch.html
+++ b/Files/currentMatch.html
@@ -90,10 +90,49 @@
         <!-- boby part over -->
 
         <!-- footer part start -->
-        <footer class="footer"></footer>
+        <footer class="footer">
+          <div class="navigator">
+            <ul>
+              <li class="list active">
+                <a href="">
+                  <sapn class="icon"
+                    ><i class="fa fa-home" aria-hidden="true"></i
+                  ></sapn>
+                  <sapn class="iconText">Home</sapn>
+                </a>
+              </li>
+              <li class="list">
+                <a href="">
+                  <sapn class="icon"
+                    ><i class="fa fa-list-alt" aria-hidden="true"></i>
+                  </sapn>
+                  <sapn class="iconText">list</sapn>
+                </a>
+              </li>
+              <li class="list">
+                <a href="">
+                  <sapn class="icon"
+                    ><i class="fa fa-user" aria-hidden="true"></i
+                  ></sapn>
+                  <sapn class="iconText">Profile</sapn>
+                </a>
+              </li>
+              <li class="list">
+                <a href="">
+                  <sapn class="icon"
+                    ><i class="fa fa-history" aria-hidden="true"></i>
+                  </sapn>
+                  <sapn class="iconText">History</sapn>
+                </a>
+              </li>
+              <div class="indicator"></div>
+            </ul>
+          </div>
+        </footer>
         <!-- footer part over -->
       </div>
     </div>
-    <script src="currentMatch.js" type="module"></script>
+    <script src="currentMatch.js"></script>
+    <script src="footer.js"></script>
   </body>
 </html>
