--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="Files/header.css" />
     <link rel="stylesheet" href="Files/body.css" />
     <link rel="stylesheet" href="Files/footer.css" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    />
   </head>
   <body>
     <div class="container">
@@ -85,15 +89,16 @@
         <footer class="footer">
           <div class="navigator">
             <ul>
-              <li class="list active">
+              <li class="list active home">
                 <a href="">
                   <sapn class="icon"
                     ><i class="fa fa-home" aria-hidden="true"></i
                   ></sapn>
                   <sapn class="iconText">Home</sapn>
                 </a>
+                <div class="indicator"></div>
               </li>
-              <li class="list">
+              <li class="list List">
                 <a href="">
                   <sapn class="icon"
                     ><i class="fa fa-list-alt" aria-hidden="true"></i>
@@ -101,7 +106,7 @@
                   <sapn class="iconText">list</sapn>
                 </a>
               </li>
-              <li class="list">
+              <li class="list profile">
                 <a href="">
                   <sapn class="icon"
                     ><i class="fa fa-user" aria-hidden="true"></i
@@ -109,7 +114,7 @@
                   <sapn class="iconText">Profile</sapn>
                 </a>
               </li>
-              <li class="list">
+              <li class="list history">
                 <a href="">
                   <sapn class="icon"
                     ><i class="fa fa-history" aria-hidden="true"></i>
@@ -117,7 +122,6 @@
                   <sapn class="iconText">History</sapn>
                 </a>
               </li>
-              <div class="indicator"></div>
             </ul>
           </div>
         </footer>
