--- a/Files/currentMatch.html
+++ b/Files/currentMatch.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="curremtMatch.css" />
     <link rel="stylesheet" href="currentPosition.css" />
     <link rel="stylesheet" href="footer.css" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    />
   </head>
   <body>
     <div class="container">
@@ -93,39 +97,38 @@
         <footer class="footer">
           <div class="navigator">
             <ul>
-              <li class="list active">
+              <!-- <li class="list active home">
                 <a href="">
                   <sapn class="icon"
                     ><i class="fa fa-home" aria-hidden="true"></i
                   ></sapn>
                   <sapn class="iconText">Home</sapn>
                 </a>
-              </li>
-              <li class="list">
-                <a href="">
+              </li> -->
+              <li class="list List active">
+                <a id="listBtnFooter">
                   <sapn class="icon"
                     ><i class="fa fa-list-alt" aria-hidden="true"></i>
                   </sapn>
                   <sapn class="iconText">list</sapn>
                 </a>
               </li>
-              <li class="list">
-                <a href="">
+              <li class="list profile">
+                <a id="profileBtnFooter">
                   <sapn class="icon"
                     ><i class="fa fa-user" aria-hidden="true"></i
                   ></sapn>
                   <sapn class="iconText">Profile</sapn>
                 </a>
               </li>
-              <li class="list">
+              <!-- <li class="list history">
                 <a href="">
                   <sapn class="icon"
                     ><i class="fa fa-history" aria-hidden="true"></i>
                   </sapn>
                   <sapn class="iconText">History</sapn>
                 </a>
-              </li>
-              <div class="indicator"></div>
+              </li> -->
             </ul>
           </div>
         </footer>
