--- a/index.html
+++ b/index.html
@@ -90,32 +90,32 @@
           <div class="navigator">
             <ul>
               <li class="list active home">
-                <a href="">
+                <a href="index.html">
                   <sapn class="icon"
                     ><i class="fa fa-home" aria-hidden="true"></i
                   ></sapn>
                   <sapn class="iconText">Home</sapn>
                 </a>
-                <div class="indicator"></div>
+                <!-- <div class="indicator"></div> -->
               </li>
-              <li class="list List">
+              <!-- <li class="list List">
                 <a href="">
                   <sapn class="icon"
                     ><i class="fa fa-list-alt" aria-hidden="true"></i>
                   </sapn>
                   <sapn class="iconText">list</sapn>
                 </a>
-              </li>
-              <li class="list profile">
+              </li> -->
+              <!-- <li class="list profile">
                 <a href="">
                   <sapn class="icon"
                     ><i class="fa fa-user" aria-hidden="true"></i
                   ></sapn>
                   <sapn class="iconText">Profile</sapn>
                 </a>
-              </li>
+              </li> -->
               <li class="list history">
-                <a href="">
+                <a href="Files/tournamentHistory.html">
                   <sapn class="icon"
                     ><i class="fa fa-history" aria-hidden="true"></i>
                   </sapn>
