--- a/Files/tournamentHistory.html
+++ b/Files/tournamentHistory.html
@@ -57,39 +57,39 @@
         <footer class="footer">
           <div class="navigator">
             <ul>
-              <li class="list active">
-                <a href="">
+              <li class="list home">
+                <a href="../index.html">
                   <sapn class="icon"
                     ><i class="fa fa-home" aria-hidden="true"></i
                   ></sapn>
                   <sapn class="iconText">Home</sapn>
                 </a>
+                <!-- <div class="indicator"></div> -->
               </li>
-              <li class="list">
+              <!-- <li class="list List">
                 <a href="">
                   <sapn class="icon"
                     ><i class="fa fa-list-alt" aria-hidden="true"></i>
                   </sapn>
                   <sapn class="iconText">list</sapn>
                 </a>
-              </li>
-              <li class="list">
+              </li> -->
+              <!-- <li class="list profile">
                 <a href="">
                   <sapn class="icon"
                     ><i class="fa fa-user" aria-hidden="true"></i
                   ></sapn>
                   <sapn class="iconText">Profile</sapn>
                 </a>
-              </li>
-              <li class="list">
-                <a href="">
+              </li> -->
+              <li class="list active history">
+                <a href="tournamentHistory.html">
                   <sapn class="icon"
                     ><i class="fa fa-history" aria-hidden="true"></i>
                   </sapn>
                   <sapn class="iconText">History</sapn>
                 </a>
               </li>
-              <div class="indicator"></div>
             </ul>
           </div>
         </footer>
