--- a/Files/squad.html
+++ b/Files/squad.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TEAM MAKING WEBSITE</title>
+    <link rel="icon" href="images/icon2.jpg" />
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="squad.css" />
@@ -66,14 +67,14 @@
         <footer class="footer">
           <div class="navigator">
             <ul>
-              <!-- <li class="list active home">
-                <a href="">
+              <li class="list home">
+                <a id="homeBtnFooter">
                   <sapn class="icon"
                     ><i class="fa fa-home" aria-hidden="true"></i
                   ></sapn>
                   <sapn class="iconText">Home</sapn>
                 </a>
-              </li> -->
+              </li>
               <li class="list List active">
                 <a id="listBtnFooter">
                   <sapn class="icon"
@@ -90,14 +91,14 @@
                   <sapn class="iconText">Profile</sapn>
                 </a>
               </li>
-              <!-- <li class="list history">
-                <a href="">
+              <li class="list history">
+                <a id="historyBtnFooter">
                   <sapn class="icon"
                     ><i class="fa fa-history" aria-hidden="true"></i>
                   </sapn>
                   <sapn class="iconText">History</sapn>
                 </a>
-              </li> -->
+              </li>
             </ul>
           </div>
         </footer>
