--- a/Files/tournamentHistory.html
+++ b/Files/tournamentHistory.html
@@ -58,7 +58,7 @@
           <div class="navigator">
             <ul>
               <li class="list home">
-                <a href="../index.html">
+                <a id="homeBtnFooter">
                   <sapn class="icon"
                     ><i class="fa fa-home" aria-hidden="true"></i
                   ></sapn>
@@ -66,14 +66,14 @@
                 </a>
                 <!-- <div class="indicator"></div> -->
               </li>
-              <!-- <li class="list List">
-                <a href="">
+              <li class="list List">
+                <a id="listBtnFooter">
                   <sapn class="icon"
                     ><i class="fa fa-list-alt" aria-hidden="true"></i>
                   </sapn>
                   <sapn class="iconText">list</sapn>
                 </a>
-              </li> -->
+              </li>
               <!-- <li class="list profile">
                 <a href="">
                   <sapn class="icon"
@@ -83,7 +83,7 @@
                 </a>
               </li> -->
               <li class="list active history">
-                <a href="tournamentHistory.html">
+                <a id="historyBtnFooter">
                   <sapn class="icon"
                     ><i class="fa fa-history" aria-hidden="true"></i>
                   </sapn>
