--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Squad Making website</title>
+    <link rel="icon" href="Files/images/icon3.jpg" />
     <link rel="stylesheet" href="Files/index.css" />
     <link rel="stylesheet" href="Files/header.css" />
     <link rel="stylesheet" href="Files/body.css" />
@@ -90,7 +91,7 @@
           <div class="navigator">
             <ul>
               <li class="list active home">
-                <a href="index.html">
+                <a id="homeBtnFooter">
                   <sapn class="icon"
                     ><i class="fa fa-home" aria-hidden="true"></i
                   ></sapn>
@@ -98,14 +99,14 @@
                 </a>
                 <!-- <div class="indicator"></div> -->
               </li>
-              <!-- <li class="list List">
-                <a href="">
+              <li class="list List">
+                <a id="listBtnFooter">
                   <sapn class="icon"
                     ><i class="fa fa-list-alt" aria-hidden="true"></i>
                   </sapn>
                   <sapn class="iconText">list</sapn>
                 </a>
-              </li> -->
+              </li>
               <!-- <li class="list profile">
                 <a href="">
                   <sapn class="icon"
@@ -115,7 +116,7 @@
                 </a>
               </li> -->
               <li class="list history">
-                <a href="Files/tournamentHistory.html">
+                <a id="historyBtnFooter">
                   <sapn class="icon"
                     ><i class="fa fa-history" aria-hidden="true"></i>
                   </sapn>
