--- a/Files/currentMatch.html
+++ b/Files/currentMatch.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TEAM MAKING WEBSITE</title>
+    <link rel="icon" href="images/icon4.jpg" />
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="curremtMatch.css" />
