--- a/Files/squad.html
+++ b/Files/squad.html
@@ -20,7 +20,14 @@
     <div class="container">
       <div class="mobileCover">
         <!-- Header part start -->
-        <header class="header"></header>
+        <header class="header">
+          <div class="logoHeader"><img src="images/icon4.jpg" alt="" /></div>
+          <div class="siteNameHeader">
+            <a id="C">C</a>
+            <a href="">hampionShip-75</a>
+          </div>
+          <div class="imgHeader"><img src="images/vsIcon.jpg" alt="" /></div>
+        </header>
         <!-- Header part over -->
 
         <!-- boby part start -->
