--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
     <div class="container">
       <div class="mobileCover">
         <!-- Header part start -->
-        <header class="header"></header>
+        <header class="header">
+          <div class="logoHeader">
+            <img src="Files/images/icon4.jpg" alt="" />
+          </div>
+          <div class="siteNameHeader">
+            <a id="C">C</a>
+            <a href="">hampionShip-75</a>
+          </div>
+          <div class="imgHeader">
+            <img src="Files/images/indexIcon.jpg" alt="" />
+          </div>
+        </header>
         <!-- Header part over -->
 
         <!-- boby part start -->
