--- a/Files/squad.html
+++ b/Files/squad.html
@@ -34,21 +34,38 @@
         <div class="body">
           <div class="matchHeading"><a>Match Records</a></div>
           <div class="matchContent">
+            <!--  -->
             <!-- <div class="matchBoxes">
               <div class="matchBoxesHeading">
                 <div class="matchCategory">
                   <a style="font-size: 1rem">Semi-final</a>
                 </div>
                 <div class="matchTeamName">
-                  <a>Nitesh vs Savita</a>
+                  <a>Nitesh.. vs Savita..</a>
                 </div>
               </div>
               <div class="matchBoxesBody">
                 <div class="matchStartBtn">
-                  <button><a class="matchBtn">Start</a></button>
+                  <i class="fa fa-trophy" aria-hidden="true"></i
+                  ><a>Nitesh won by 88 Points</a>
                 </div>
               </div>
             </div> -->
+            <!--  -->
+            <!-- <div class="matchBoxes">
+              <div class="matchBoxesHeading">
+                <div class="matchTeamName">
+                  <a>Nitesh..-(12) Vs hhhhhh..-(20)</a>
+                </div>
+              </div>
+              <div class="matchBoxesBody">
+                <div class="matchStartBtn">
+                  <i class="fa fa-trophy" aria-hidden="true"></i
+                  ><a>Nitesh.. won by 88 Points</a>
+                </div>
+              </div>
+            </div> -->
+
             <!-- finish -->
           </div>
 
@@ -59,7 +76,7 @@
           <!-- profile -->
           <div class="currentPositionCover">
             <div class="profileHeading">
-              <a style="color: #09aeff">Player's Profile</a>
+              <a style="color: #09aeff">Player's Profile on the basis of </a>
             </div>
             <div class="allProfile">
               <!-- <div class="profileList">
