--- a/Files/tournamentHistory.html
+++ b/Files/tournamentHistory.html
@@ -33,7 +33,7 @@
         <div class="body">
           <div class="tournamentProfileCover">
             <div class="tournamentProfileHeading">
-              <a>Tournament History</a>
+              <a>Tournament Profile</a>
             </div>
             <div class="tournamentProfileBody">
               <!-- <div class="tournamentProfileList">
