comment out remaining files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Squad Making website</title>
-    <link rel="icon" href="Files/images/icon4.jpg" />
+    <title>Tournament Organiser</title>
+    <link rel="icon" href="Files/images/icon2.jpg" />
     <link rel="stylesheet" href="Files/webContainer.css" />
     <link rel="stylesheet" href="Files/header.css" />
     <link rel="stylesheet" href="Files/index.css" />
