--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
               <div class="formElement">
                 <div class="formElementHeading">
-                  <a id="addPlayer">Add Players</a>
+                  <a id="addPlayer">Added Players (0)</a>
                 </div>
                 <div class="formElementBody">
                   <div class="formBodyInput">
